--- a/css/standardimport.css
+++ b/css/standardimport.css
@@ -2,3 +2,11 @@
     
     width: 100%;
 }
+
+h2.titoloblu{
+    
+    color: #004890;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: center;
+}
