--- a/css/standardimport.css
+++ b/css/standardimport.css
@@ -3,10 +3,26 @@
     width: 100%;
 }
 
-h2.titoloblu{
-    
-    color: #004890;
+h1{
+    font-weight: bold;
+    font-size: 30px;
+    text-align: center;
+}
+
+h2{
     font-weight: bold;
     font-size: 20px;
     text-align: center;
+}
+
+.titoloblu{
+    
+    color: #004890;
+    text-align: center;
+}
+
+p.center{
+    font-size: 20px;    
+    text-align: center;
+    line-height: 25px;
 }
