--- a/css/standardimport.css
+++ b/css/standardimport.css
@@ -26,3 +26,27 @@ p.center{
     text-align: center;
     line-height: 25px;
 }
+
+.sfondotitoloblu
+{
+    padding: 30px 10px;
+    color: #FFFFFF;
+    background-color: #004890;
+    text-align: center;
+    font-size: 20px;
+}
+.sfondogrigio
+{
+    text-align: center;
+    background-color: #F0F0F0;
+    padding: 35px 0px;
+}
+h1.titolorosso
+{
+    color: #FF0000;
+}
+.nopadding
+{
+    padding-left: 0px;
+    padding-right: 0px;
+}
