--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,9 @@ html {
     font-family: Arial;
 }
 
-#page {
-    margin-top: 1rem;
-}
-
 #content {
     margin: 0;
-    padding: 2rem 0;
+    padding: 3rem 0;
     min-height: 80rem;
     float: none;
 }
@@ -19,7 +15,7 @@ html {
 #footer {
     background-color: #004890;
     clear:both;
-    margin-top: 50px;
+    padding-top: 1rem;
 }
 
 #footer-logo img {
@@ -40,6 +36,10 @@ html {
 
 #footer-social {
     text-align: center;
+}
+
+#footer ul {
+	list-style-type:none;
 }
 
 #footer a, #footer div, #footer p {
