--- a/css/menu.css
+++ b/css/menu.css
@@ -1,50 +1,114 @@
-#top a, #top img {
+#top-large a, #top-large img {
     height: 5rem;
     line-height: 3.5rem;
 }
 
-#top ul, #top li {   
+#top-large ul, #top-large li {   
     display: inline-block;
 }
 
-#top li {
+#top-large li {
 	margin-top: 0.8rem;
 	margin-bottom: -0.8rem;
 }
 
 /* BACKGROUND AND POSITIONS */
-#logo {
+#logo-large {
     padding: 0;
 }
 
-#logo, .left, .wave {
+@media (max-width: @screen-md-max) {
+	#logo-large {
+		background-color: white;
+	}
+}
+
+@media (min-width: @screen-lg-min) {
+	#logo-large {
+		background-color: white;
+	}
+}
+
+#top-large .left, #top-large .wave {
     background-color: #f0f0f0;
 }
 
-.right, .right-border {
+#top-large .right, #top-large .right-border {
     background-color: #cccccc;
 }
 
-.wave img, .right-border img {
+#top-large .wave img, #top-large .right-border img {
     float: right;
+}
+
+#top-large {
+	padding-left: 15px;
+}
+
+#top-large .no-right-padding{
+	padding-right: 0px;
 }
 
 /* DISTRIBUIRE ORIZZONTALMENTE I LINK */
 
-div.left, div.right, div.wave, div.right-border {
+#top-large div.left, #top-large div.right, #top-large div.wave, #top-large div.right-border {
     padding: 0;
 }
 
-#top ul {
+#top-large ul {
     width: 100%;
 }
 
-#top ul, #top li, #top a {
+#top-large ul, #top-large li, #top-large a {
     text-align: center;
 }
 
 /* GENERAL STYLE */ 
-a {
+#top-large a {
     color: black;
     font-size: 1.4rem;
+    line-height: 5rem;
+    height: 5rem;
+    padding-bottom: 1rem;
+}
+
+#top-large .highlight:first-child {
+	margin-left: 1.6rem;
+	margin-right: -1.6rem;
+}
+
+#top-large .highlight {
+	border-bottom: solid 7px #004890; 
+}
+
+
+/* SMALL */
+#top-menu-small {
+	margin-top: 2rem;
+}
+
+#top-small img {
+	height: 5rem;
+}
+#top-small a {
+	padding: 0.5rem 0;
+    font-size: 1.6rem;
+    line-height: 3.2rem;
+}
+#top-small .first-menu a {
+	color: white;
+}
+#top-small .first-menu {
+	background-color: #004592;
+}
+#top-small .second-menu a{
+	color: #004592;
+}
+#top-small .second-menu {
+	background-color: #CCCCCC;
+}
+#top-small ul {
+	list-style-type: none;
+	padding: 0 3rem;
+	margin: 0;
 }
