--- a/css/standardimport.css
+++ b/css/standardimport.css
@@ -27,19 +27,21 @@ p.center{
     line-height: 25px;
 }
 
-.sfondotitoloblu
+.sfondoblu
 {
-    padding: 30px 10px;
     color: #FFFFFF;
     background-color: #004890;
+}
+.barratitolo
+{
+    padding: 15px 0px;
     text-align: center;
     font-size: 20px;
 }
 .sfondogrigio
 {
-    text-align: center;
     background-color: #F0F0F0;
-    padding: 35px 0px;
+    color: #000000;
 }
 h1.titolorosso
 {
