--- a/css/standardimport.css
+++ b/css/standardimport.css
@@ -5,13 +5,11 @@
 
 h1{
     font-weight: bold;
-    font-size: 30px;
     text-align: center;
 }
 
 h2{
     font-weight: bold;
-    font-size: 20px;
     text-align: center;
 }
 
@@ -53,3 +51,14 @@ h1.titolorosso
     padding-right: 0px;
 }
 
+div.sottomenugrigiodiv{
+       
+    padding: 13px 0px 6px 0px;    
+    background-color: #F0F0F0;
+    border-bottom: solid 7px #F0F0F0;
+}
+
+#cellasottolineatablu{
+    
+    border-bottom: solid 7px #004890;
+}
