--- a/css/standardimport.css
+++ b/css/standardimport.css
@@ -162,5 +162,5 @@ p.big {
 }
 
 .grey-red-menu div:hover , .grey-red-menu div.current-link {
-	border-bottom: 5px solid eb0028;
+	border-bottom: 5px solid #eb0028;
 }
