--- a/css/guido.css
+++ b/css/guido.css
@@ -15,10 +15,18 @@ div.middle-align-block { /*used to vertically center all the contents in the foo
 }
 
 .inner-center {
-   position: absolute;
+    position: absolute;
     top: 40%;
     left: 0;
     width: 100%;
+}
+
+.inner-presentation {
+    color: #FFFFFF;
+    position: absolute;
+    top: 25%;
+    left: 0;
+    text-align: left;
 }
 
 .cn{
