--- a/css/guido.css
+++ b/css/guido.css
@@ -24,10 +24,140 @@ div.middle-align-block { /*used to vertically center all the contents in the foo
 .inner-presentation {
     color: #FFFFFF;
     position: absolute;
-    top: 25%;
+    top: 20%;
     left: 0;
-    text-align: left;
+    padding-left: 3%;
 }
+.inner-presentation h1
+{
+    text-align: left;
+    font-weight: 500;
+    margin-bottom: 0px;
+}
+.inner-presentation h2
+{
+    text-align: left;
+    font-weight: 100;
+    margin-top: 0px;
+}
+
+@media only screen and (max-width: 1199px) 
+{
+    .inner-presentation h1
+    { 
+        font-size: 31px;
+    }
+    .inner-presentation h2 
+    {
+        font-size: 25px;
+    }
+    
+    .inner-presentation 
+    {
+        top: 15%;
+    }
+
+}
+@media only screen and (max-width: 991px) 
+{
+    .inner-presentation h1
+    { 
+        font-size: 25px;
+    }
+    .inner-presentation h2 
+    {
+        font-size: 20px;
+    }
+    
+    .inner-presentation {
+    color: #FFFFFF;
+    position: absolute;
+    top: 10%;
+    left: 2%;
+    padding-left: 3%;
+}
+
+}
+
+@media only screen and (max-width: 767px) 
+{
+    .inner-presentation h1
+    { 
+        font-size: 25px;
+        margin: 0;
+    }
+    .inner-presentation h2 
+    {
+        font-size: 17px;
+        margin-top: 0px;
+    }
+    
+  .inner-presentation 
+    {
+        color: #FFFFFF;
+        position: absolute;
+        top: 20%;
+        left: 2%;
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-left: 20px;
+    }
+
+
+}
+
+@media only screen and (max-width: 450px) 
+{
+    .inner-presentation h1
+    { 
+        font-size: 20px;
+        margin: 0;
+    }
+    .inner-presentation h2 
+    {
+        font-size: 15px;
+        margin-top: 0px;
+    }
+    
+    .inner-presentation 
+    {
+        color: #FFFFFF;
+        position: absolute;
+        top: 10%;
+        left: 2%;
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-left: 20px;
+    }
+
+}
+
+@media only screen and (max-width: 360px) 
+{
+    .inner-presentation h1
+    { 
+        font-size: 20px;
+        margin: 0;
+    }
+    .inner-presentation h2 
+    {
+        font-size: 15px;
+        margin-top: 0px;
+    }
+    
+    .inner-presentation 
+    {
+        color: #FFFFFF;
+        position: absolute;
+        top: 0%;
+        left: 0;
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-left: 20px;
+    }
+
+}
+
 
 .cn{
     display: flex;
