--- a/css/antnio.css
+++ b/css/antnio.css
@@ -1,7 +1,103 @@
 .grey-bar
-            {
-                background-color: #F0F0F0;
-                padding: 13px;
-                color: #004890;
-                font-size: 20px;
-            }
+{
+    background-color: #F0F0F0;
+    padding: 13px;
+    color: #004890;
+    font-size: 20px;
+}
+div.plans-review
+{
+    background-color: #F0F0F0;
+
+}
+.plans-review div
+{
+    background-color: #F0F0F0;
+
+}
+.plans-review div.buttons
+{
+    padding-bottom: 2px;
+    padding-top: 2px;
+    color: #FFFFFF;
+    border-top: solid 5px #FEFEFE;
+    border-bottom: solid 5px #FEFEFE;
+    border-left: solid 5px #FEFEFE;
+
+}
+.plans-review .red
+{
+     background-color: #eb0028;
+}
+.plans-review .blue
+{
+     background-color: #004890;
+}
+.plans-review div.buttons h3
+{
+    color: #FFFFFF;
+    margin: 5px 0px 5px;
+    text-align: center;
+}
+/*AGGIUNGERE MEDIA QUERY PER GRANDEZZA TESTO SOPRA*/
+.plans-review h1
+{
+    color: #004890;
+}
+.plans-review h2
+{
+    color: #eb0028;
+}
+
+.plans-description
+{
+    border: solid 2px #000;
+}
+
+.plans-description div.photo
+{
+    text-align: right;
+}
+
+.plans-description div.bar div.blue
+{
+    background-color: #004890;
+    height: 15px;
+    position: absolute;
+    top: 25px;
+}
+.plans-description h1
+{
+    text-align: left;
+    font-size: 25px;
+    color: #004890;
+}
+.plans-description h2
+{
+    text-align: left;
+    font-size: 18px;
+    color: #000;
+    margin-top: 25px;
+}
+@media only screen and (max-width: 767px) 
+{
+    .plans-description h1
+    {
+        text-align: center;
+    }
+}
+@media only screen and (max-width: 420) 
+{
+   .plans-description div.photo
+    {
+        text-align: left;
+    }
+}
+ .subcategory
+{
+    padding: 20px;
+    background-color: #F0F0F0;
+    border-bottom: solid 2px #000000;
+    color: black;
+    text-align: left;
+}
