--- a/css/guido.css
+++ b/css/guido.css
@@ -163,3 +163,63 @@ div.middle-align-block { /*used to vertically center all the contents in the foo
     display: flex;
     justify-content: center;
 }
+
+.promotiontile{
+
+    position: relative;
+    width: 300px;
+    height: 300px;
+}
+
+.promotionbox1{
+
+    position: absolute;
+    margin: 25px;
+    border-radius: 25px;
+    background-color: #004890;
+    height: 125px;
+    width: 250px;
+    text-align: center;
+    font-size: 40px;
+    z-index: 6;
+}
+
+.promotionbox2{
+
+    position: absolute;
+    margin: 100px 25px 25px 25px;
+    border-radius: 25px;
+    background-color: #CCCCCC;
+    height: 170px;
+    width: 250px;
+    text-align: center;
+    font-size: 40px;
+    z-index: 5;
+}
+
+.button-next{
+
+    width: 15%;
+}
+
+.father-center{
+
+    display: flex;
+    justify-content: center;
+}
+
+.child-center{
+
+    margin: auto;
+    align-self: center;
+}
+
+.marginforrow{
+
+    margin: 7% 0%;
+}
+
+.nomarginfull{
+
+    margin:0;
+}
