--- a/css/singleSmartLife.css
+++ b/css/singleSmartLife.css
@@ -19,6 +19,9 @@
 
 .smart-life-spot {
 	margin-left: 5%;
+	margin-bottom: 20px;
+	margin-top: -50px;
+	color: white;
 }
 
 @media screen and (max-width: 500px) { 
@@ -30,4 +33,53 @@
 
 .smart-life-spot span, .smart-life-spot h1 {
 	text-align: left;
+}
+
+.smart-life-buy {
+	text-align: right;
+	vertical-align: bottom;
+}
+
+
+@media (max-width: 767px) {
+	div.single-smart-life {
+		min-height: 350px;
+	}
+	div.smart-life-navbar {
+		margin-bottom: 100px !important;
+	}
+	.smart-life-buy {
+		text-align: left;
+		margin-left: 5%;
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
+}
+@media (min-width: 768px) and (max-width: 991px) {
+	div.single-smart-life {
+		min-height: 400px;
+	}
+	
+	div.smart-life-navbar {
+		margin-bottom: 200px !important;
+	}
+
+}
+@media (min-width: 992px) and (max-width: 1199px) { 
+	div.single-smart-life {
+		min-height: 450px;
+	}
+	
+	div.smart-life-navbar {
+		margin-bottom: 250px !important;
+	}
+}
+@media (min-width: 1200px) { 
+	div.single-smart-life {
+		min-height: 500px;
+	}
+	
+	div.smart-life-navbar {
+		margin-bottom: 300px !important;
+	}
 }
