--- a/css/antonio.css
+++ b/css/antonio.css
@@ -113,3 +113,39 @@ img.myimg-responsive
 {
     color: #004890;
 }
+div.prezzo h1
+{
+    margin-top: 0px;
+}
+div.prezzo h2
+{
+    margin-bottom: 0;
+    margin-top: 0;
+}
+img.img-device
+{
+    width: 100%;
+}
+@media only screen and (max-width: 767px) 
+{
+    img.img-device
+    {
+        width: 5em;
+    }
+}
+div.correlati h3
+{
+    text-align: center;
+}
+div.correlati img
+{
+    width: 7em;
+}
+div.correlati div
+{
+    text-align: center;
+}
+div.grey
+{
+    background-color: #F0F0F0;
+}
