--- a/css/menu.css
+++ b/css/menu.css
@@ -12,11 +12,11 @@
 	margin-bottom: -0.8rem;
 }
 
-@media (max-width:1200px) and (min-width:768px) {
+/*@media (max-width:1200px) and (min-width:768px) {
 	#top-large div a:first-child {
 		margin-left: 2rem;
 	}
-}
+}*/
 
 /* BACKGROUND AND POSITIONS */
 #logo-large {
