--- a/css/device/selected-category.css
+++ b/css/device/selected-category.css
@@ -6,6 +6,44 @@
 	background-color: #015cab;
 }
 
+#main-text h3 {
+	color: white;
+	padding: 15px;
+	text-transform: uppercase;
+}
+
+#devices-view {
+	margin-top: 20px;
+	border-top: solid 4px #015CAB;
+}
+
+#devices-menu {
+	background-color: #015cab;
+	padding: 20px;
+}
+
+#devices-menu span {
+	font-size: 20px;
+}
+
+#devices-menu a {
+	font-size: 16px;
+}
+
+#devices-menu div, #devices-menu span {
+	color: white;
+	display: block;
+	width: 100%;
+}
+
+#devices-menu input {
+	margin-left: 15px; 
+}
+
+#devices-list {
+	background-color: white;
+}
+
 
 @media (max-width: 767px) {
 	#main-image {
