--- a/css/antonio.css
+++ b/css/antonio.css
@@ -178,3 +178,15 @@ div.as-last a
     width: 130px;
 
 }
+
+div.smart-life-preview div
+{
+   text-align: center;  
+}
+
+div.smart-life-preview img
+{
+    height: 60px;
+    width: 100%;
+    
+}
